--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -40,7 +40,7 @@
       z-index: 1;
     }
   
-    .hero-title    { font-weight: 600; font-size: 48px; }
+    .hero-title    { font-weight: 600; margin-top: 1rem; font-size: 48px; }
     .hero-location { font-size: 36px; margin-top: 1rem; }
     .hero-date     { font-size: 36px; }
   }
