--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,6 +28,8 @@
 @use './pages/news';
 @use './pages/submission';
 @use './pages/organization';
+@use './pages/keynote-detail';
+@use './pages/keynote';
 @use './pages/venue';
 @use "pages/cfp-iclea";
 
