--- a/scss/settings/_fonts.scss
+++ b/scss/settings/_fonts.scss
@@ -9,7 +9,9 @@
 
 // If you can't enqueue Google Fonts in WP, you can keep this import.
 // (Prefer enqueueing via functions.php for performance.)
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap&subset=latin-ext');
+
+
 
 // Stacks
 $font-sans: 'Lato', system-ui, -apple-system, 'Segoe UI', Roboto,
@@ -23,6 +25,8 @@ $font-mono: ui-monospace, 'SFMono-Regular', Menlo, Monaco, Consolas,
 $fw-light:   300 !default;
 $fw-regular: 400 !default;
 $fw-bold:    700 !default;
+$fw-extrabold: 800 !default;
+$fw-black:     900 !default;
 
 // Rendering helpers
 @mixin antialias {
